crates/vize_maestro/src/server/snapshots/vize_maestro__server__format__tests__format_document_respects_options.snap
---
source: crates/vize_maestro/src/server/format.rs
expression: "edits[0].new_text.as_str()"
---
<script>
const x = 1
</script>
