crates/vize_maestro/src/server/snapshots/vize_maestro__server__format__tests__format_document_returns_edit_for_unformatted.snap
---
source: crates/vize_maestro/src/server/format.rs
expression: edits
---
[
    TextEdit {
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 3,
                character: 0,
            },
        },
        new_text: "<template>\n  <div>hello</div>\n</template>\n",
    },
]
