crates/vize_maestro/src/server/snapshots/vize_maestro__server__format__tests__format_document_with_single_quote.snap
---
source: crates/vize_maestro/src/server/format.rs
expression: edits
---
[
    TextEdit {
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 3,
                character: 9,
            },
        },
        new_text: "<script>\nconst x = 'hello';\n</script>\n",
    },
]
